--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.7.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
@@ -24,6 +25,7 @@
     "@kibocommerce/graphql-client": "^1.0.3-beta.9",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.2.2",
+    "@webiny/app-page-builder-elements": "^5.25.0",
     "next": "12.0.4",
     "next-i18next": "^10.2.0",
     "react": "17.0.2",
