test storybook mocker service worker

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "next lint",
     "generate-types": "graphql-codegen",
     "storybook": "start-storybook -p 3000 -s ./public",
-    "build-storybook": "build-storybook",
+    "build-storybook": "build-storybook && npx copyfiles -u 1 ./public/mockServiceWorker.js ./storybook-static/",
     "validate-types": "tsc --noEmit --declaration",
     "test": "jest",
     "test-report-coverage": "jest --silent --coverage --testResultsProcessor=jest-sonar-reporter",
@@ -71,6 +71,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "@vercel/fetch": "^6.1.1",
     "babel-loader": "^8.2.3",
+    "copyfiles": "^2.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
