--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test-report-coverage": "jest --silent --coverage --testResultsProcessor=jest-sonar-reporter",
     "test-watch": "jest --watch",
     "prettier:format": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@emotion/cache": "latest",
@@ -30,6 +31,11 @@
     "@kibocommerce/graphql-client": "1.0.3-beta.10",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.8.3",
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/next": "^0.1.7",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@testing-library/react-hooks": "^8.0.0",
     "cookies-next": "^2.1.1",
     "core-js": "^3.24.0",
@@ -97,6 +103,7 @@
     "msw-storybook-addon": "^1.6.3",
     "prettier": "^2.5.0",
     "pretty-quick": "^3.1.3",
+    "slice-machine-ui": "^0.5.1",
     "storybook-addon-material-ui5": "^1.0.0",
     "storybook-addon-next": "^1.3.1",
     "ts-jest": "^28.0.3",
