--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@emotion/eslint-plugin": "^11.7.0",
     "@graphql-codegen/typescript": "^2.4.1",
     "@graphql-codegen/typescript-operations": "^2.2.1",
-    "@playwright/test": "^1.18.1",
     "@storybook/addon-a11y": "^6.4.20",
     "@storybook/addon-actions": "^6.4.17",
     "@storybook/addon-essentials": "^6.4.17",
@@ -97,7 +96,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "msw": "^0.49.1",
     "msw-storybook-addon": "^1.6.3",
-    "next-router-mock": "^0.9.1-beta.0",
+    "next-router-mock": "^0.9.1",
     "prettier": "^2.5.0",
     "pretty-quick": "^3.1.3",
     "storybook-addon-material-ui5": "^1.0.0",
